samples/_failures_safe/1761444400_b85fd6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fee90f5.c: In function ‘main’:
./samples/SAFE/__tmp_4fee90f5.c:170:16: error: missing terminating " character
  170 |         printf("Warning: Input too large,
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4fee90f5.c:170:9: error: expected expression at end of input
  170 |         printf("Warning: Input too large,
      |         ^~~~~~
./samples/SAFE/__tmp_4fee90f5.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4fee90f5.c:170:9: error: expected declaration or statement at end of input
